# Gravity-Sim

./: .env.cmake  CMakeLists.txt  LICENSE  README.md  points.txt  setup.sh  template.build.cmake
info/: ProjectInfo.hpp  ProjectInfo.hpp.in
src/: Main.cpp
src/Debug/: Exception.hpp  Logger.cpp  Logger.hpp
src/Graphics/: GraphicsPipeline.cpp  GraphicsPipeline.hpp
src/Graphics/Shaders/: FragShader.frag  FragShader.frag.u32  VertShader.vert  VertShader.vert.u32
src/Manager/: Loader.cpp  Loader.hpp  Parser.cpp  Parser.hpp  ProgramLoop.cpp  ProgramLoop.hpp
src/Particles/: Particle.hpp  ParticleSystem.cpp  ParticleSystem.hpp
src/Platform/: Event.hpp  Window.hpp
src/Platform/Linux/: Window.cpp
src/Platform/Windows/: Window.cpp
src/Simulation/BarnesHut/: BarnesHutSimulation.cpp  BarnesHutSimulation.hpp
src/Simulation/BarnesHut/Shaders/: AccelShader.comp  AccelShader.comp.u32  BoxShader.comp  BoxShader.comp.u32  BoxShader1.comp  BoxShader1.comp.u32  BoxShader2.comp  BoxShader2.comp.u32  CenterShader.comp  CenterShader.comp.u32  ClearShader.comp  ClearShader.comp.u32  ForceShader.comp  ForceShader.comp.u32  InitShader.comp  InitShader.comp.u32  ParticleSortShader.comp  ParticleSortShader.comp.u32  SortShader.comp  SortShader.comp.u32  TreeInitShader.comp  TreeInitShader.comp.u32  TreeMoveShader.comp  TreeMoveShader.comp.u32  TreeShader.comp  TreeShader.comp.u32  TreeSortShader.comp  TreeSortShader.comp.u32
src/Simulation/Direct/: DirectSimulation.cpp  DirectSimulation.hpp
src/Simulation/Direct/Shaders/: SimShader.comp  SimShader.comp.u32
src/Utils/: Alignment.hpp  BuildInfo.hpp  Event.cpp  Event.hpp  Point.hpp
src/Vulkan/: Renderer.cpp  Renderer.hpp  VulkanCommandPool.cpp  VulkanCommandPool.hpp  VulkanDevice.cpp  VulkanDevice.hpp  VulkanInstance.cpp  VulkanInstance.hpp  VulkanSurface.cpp  VulkanSurface.hpp  VulkanSwapChain.cpp  VulkanSwapChain.hpp
src/Vulkan/Compute/: ComputePipelines.cpp  ComputePipelines.hpp
src/Vulkan/Compute/Shaders/: GravityShader.comp  GravityShader.comp.u32  VelocityShader.comp  VelocityShader.comp.u32
src/Vulkan/Core/: Allocator.cpp  Allocator.hpp  CommandPool.cpp  CommandPool.hpp  Device.cpp  Device.hpp  Instance.cpp  Instance.hpp  RenderPass.cpp  RenderPass.hpp  SwapChain.cpp  SwapChain.hpp
src/Vulkan/Data/: Points.cpp  Points.hpp  SyncObjects.cpp  SyncObjects.hpp
src/Vulkan/Graphics/: GrahpicsPipeline.hpp  GraphicsPipeline.cpp
src/Vulkan/Graphics/Shaders/: FragmentShader.frag  FragmentShader.frag.u32  VertexShader.vert  VertexShader.vert.u32
